moved routes to their respective python file
improve readability and maintenance as number of capabilities increase
